fix overlapping styles

--- a/app/assets/stylesheets/base/modal.scss
+++ b/app/assets/stylesheets/base/modal.scss
@@ -72,5 +72,5 @@
   margin-bottom: 4em;
   text-align: left;
 }
-.overview { width: 70%; float: left; }
-.credits { width: 25%; float: right; }
+.modal .overview { width: 70%; float: left; }
+.modal .credits { width: 25%; float: right; }
